--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "A Clean Blog Theme by Start Bootstrap"
+description: "A life of a Corgi captured by her lovers."
 ---
 
 {% for post in paginator.posts %}
