--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: "About"
-description: "This is what I do."
+description: "Hewo. It's me. Bella!"
 header-img: "img/about-bg.jpg"
 ---
 
-Bella facts here
+Born 2-14-2006. Loves to eat everything. Barks at all living things non-human and strange noises. Enjoys rubs and long walks with humans.
