--- a/about.html
+++ b/about.html
@@ -5,4 +5,4 @@ description: "Hewo. It's me. Bella!"
 header-img: "img/about-bg.jpg"
 ---
 
-Born 2-14-2006. Loves to eat everything. Barks at all living things non-human and strange noises. Enjoys rubs and long walks with humans.
+Born 2-14-2006. 80% ears and fur. Loves to eat everything (except mushrooms). Barks at all living things non-human and strange noises. Enjoys rubs and long walks with humans. Hates fluffy white dogs.
