--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "A life of a Corgi captured by her lovers."
+description: "A life of a Corgi as captured by her humans"
 ---
 
 {% for post in paginator.posts %}
